Fixed rendering for multiple consecutive full-width controls (full-width controls now default to the proper left alignment with text instead of only the first one.

--- a/site/resources/styles/core/core-mixins.less
+++ b/site/resources/styles/core/core-mixins.less
@@ -66,3 +66,13 @@
   -webkit-column-gap: @width;
   -moz-column-gap: @width;
 }
+
+.disable-text-selection()
+{
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
