--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -852,12 +852,7 @@ ul.menu
   display: block;
   border-top: @hairline_border_width solid transparent;
   border-bottom: @hairline_border_width solid transparent;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  .disable-text-selection();
 
   &.icon
   {
